--- a/design.css
+++ b/design.css
@@ -31,6 +31,12 @@ div[data-role="page"] {
     background-position: center;
 }
 
+#Allespieler {
+    background-image: url(bilder/beerpongpic.jpg);
+    background-size:cover;
+    background-position: center;
+}
+
 #Spielen {
     background-image: url(bilder/beerpongpic.jpg);
     background-size:cover;
